--- a/index.html
+++ b/index.html
@@ -45,25 +45,38 @@
 
     <!-- My Services -->
     <section class="my-services" id="services">
-        <h2 class="section__title section__title--services">What I do</h2>
+        <h1 class="section__title section__title--services">What I do</h1>
         <div class="services">
             <div class="service">
                 <h3>Python</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque temporibus illum iste rerum ab
-                    odio numquam est vitae voluptatibus accusamus obcaecati alias debitis in dolorem, mollitia, officiis
-                    nesciunt? Accusantium, velit?</p>
+                <p>
+                <ul>
+                    <li>Gained expertise in Data Visualization using matplotlib, Bokeh and Plotly. Highly skilled
+                        inusing visualization tools like dash, flask for creating dashboards..</li>
+                    <li>Extensively used Python's multiple data science packages like Pandas, NumPy, matplotlib,Seaborn,
+                        SciPy, Scikit-learn
+                    </li>
+
+                </ul>
+                </p>
             </div> <!-- /service-->
             <div class="service">
                 <h3>Java</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis sed dolorum fugit, distinctio at
-                    impedit amet, commodi aliquid laborum, ducimus aperiam! Incidunt culpa magnam ducimus itaque sit
-                    similique corporis officia.</p>
+                <p>
+                <ul>
+                    <li>Java swing</li>
+                    <li>Experience in object-oriented programming</li>
+                    <li>Eclipse</li>
+                </ul>
+                </p>
             </div> <!-- /service-->
             <div class="service">
                 <h3>HTML-CSS-JS</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati error deserunt quaerat voluptas
-                    veritatis praesentium fugit animi. Odio explicabo quas omnis, dolore unde accusantium quaerat vitae,
-                    praesentium tempore excepturi consequatur.</p>
+                <p>
+                <ul>
+                    <li>Basic knowledge of web programming HTML, CSS, JAVASCRIPT</li>
+                </ul>
+                </p>
             </div> <!-- /service-->
         </div> <!-- /service-->
 
@@ -73,15 +86,22 @@
     <!-- About me -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about"> Designer & developer based out if NYC</p>
+        <p class="section__subtitle section__subtitle--about"> Data Analyst With Python</p>
 
         <div class="about-me__body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quae facere libero, ad sunt possimus
-                corporis laborum sit dicta accusantium dolor suscipit velit! Enim labore sit itaque excepturi incidunt
-                quia?</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et magni quibusdam veniam. Repellat quasi autem
-                omnis aliquid reiciendis nisi id animi laboriosam commodi sequi sint placeat, impedit, reprehenderit
-                error officiis?</p>
+            <p>Specialization is applied informatics. focus on using mainly python and java languages.
+            <ul>
+                <li>Experience in python, Jupyter, SQL, Java Swing
+                </li>
+                <li>Experience in Data Analysis, Machine Learning, Data mining, Data Acquisition, Predictive modeling,
+                    Data Visualization, Web Scraping.</li>
+                <li>Built models using techniques like Regression, Tree based ensemble methods, Time Series forecasting,
+                    KNN, Clustering and Isolation Forest methods.</li>
+                <li>Gained expertise in Data Visualization using matplotlib, Bokeh and Plotly. Highly skilled in using
+                    visualization tools like dash, flask for creating dashboards.</li>
+                <li>Tools: VScode, Eclipse, Git, Github</li>
+            </ul>
+            </p>
         </div>
 
         <img src="img/linhelista.jpg" alt="Lina go on the trips" class="about-me__img">
@@ -93,22 +113,43 @@
         <h2 class="section_title">My Work</h2>
         <p class="section__subtitle section__subtitle--work">A selection of my projects</p>
         <div class="portfolio">
-            <a href="#" class="portfolio__item">
-                <img src="img/linhilands.jpg" alt="" class="portfolio__img">
+
+            <a href="https://github.com/nopuli265/Warehouse_logistics_management" class="portfolio__item">
+
+                Warehouse management app with java swing
+                <img src="img/java_app.jpg" alt="" class="portfolio__img">
             </a>
 
-            <a href="#" class="portfolio__item">
-                <img src="img/linhshine.HEIC" alt="" class="portfolio__img">
+            <a href="#https://github.com/nopuli265/map_app_Volcanoes_with_folium" class="portfolio__item">
+                Volcanoes with folium
+                <img src="img/folium.jpg" alt="Volcanoes with folium" class="portfolio__img">
             </a>
 
-            <a href="#" class="portfolio__item">
-                <img src="img/linhSaint.jpg" alt="" class="portfolio__img">
+            <a href="#https://github.com/nopuli265/python_projects" class="portfolio__item">
+                Book App with tkinter and sqlite3
+                <img src="img/book_app.jpg" alt="" class="portfolio__img">
             </a>
-
-            <a href="#" class="portfolio__item">
-                <img src="img/linhSaint_half.jpg" alt="" class="portfolio__img">
+            <a href="#https://github.com/nopuli265/Project_predict_car_price" class="portfolio__item">
+                Used car price prediction
+                <img src="img/price_predict.jpg" alt="" class="portfolio__img">
             </a>
-
+            <a href="#https://github.com/nopuli265/Model_the_relationship_of_macroeconomic/tree/master"
+                class="portfolio__item">
+                Modeling the relationship of macroeconomics
+                <img src="img/macro.jpg" alt="" class="portfolio__img">
+            </a>
+            <a href="http://linhstockbokeh.herokuapp.com/plot/" class="portfolio__item">
+                Candlistick Chart web with flask and bokeh
+                <img src="img/bokeh.jpg" alt="" class="portfolio__img">
+            </a>
+            <a href="https://github.com/nopuli265/python_projects/tree/master/Plotly" class="portfolio__item">
+                Flight project with plotly and Dash
+                <img src="img/flight.jpg" alt="" class="portfolio__img">
+            </a>
+            <a href="https://github.com/nopuli265/python_projects/tree/master/justPyWeb" class="portfolio__item">
+                Visualization with Justpy
+                <img src="img/justpy.jpg" alt="" class="portfolio__img">
+            </a>
 
 
         </div>
@@ -118,7 +159,7 @@
     <!-- Footer -->
     <footer class="footer">
 
-        <a href="nopudolu@gmail.com" class="footer__link">nopudoli@gmail.com</a>
+        <a href="ngothiphuonglinh@gmail.com" class="footer__link">ngothiphuonglinh@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
                 <a href="" class="social_list__link">
@@ -131,12 +172,7 @@
                 </a>
             </li>
             <li class="social-list__item">
-                <a href="" class="social_list__link">
-                    <i class="fas fa-phone"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a href="https:/github.com" class="social_list__link">
+                <a href="https://github.com/nopuli265" class="social_list__link">
                     <i class="fa-brands fa-github"></i>
                 </a>
             </li>
