--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </h1>
 
         <p class="section__subtitle section__subtitle--intro">
-            Data analysis
+            Data Analyst/python Developer
         </p>
-        <img src="img/tuyet.HEIC" alt="a picture of Lina Ngo on the sunshine" class="intro__img">
+        <img src="img/tuyet.HEIC" alt="a picture of Lina Ngo on the snow" class="intro__img">
     </section>
 
     <!-- My Services -->
@@ -51,10 +51,10 @@
                 <h3>Python</h3>
                 <p>
                 <ul>
-                    <li>Gained expertise in Data Visualization using matplotlib, Bokeh and Plotly. Highly skilled
-                        inusing visualization tools like dash, flask for creating dashboards..</li>
-                    <li>Extensively used Python's multiple data science packages like Pandas, NumPy, matplotlib,Seaborn,
-                        SciPy, Scikit-learn
+                    <li>Gained expertise in Data Visualization using matplotlib, Bokeh and Plotly. Highly skilled in
+                        using visualization tools like Dash, flask for creating dashboards.</li>
+                    <li>Extensively used Python's multiple data science packages like Pandas,NumPy, matplotlib, Seaborn,
+                        SciPy, Scikit-learn...
                     </li>
 
                 </ul>
@@ -64,7 +64,7 @@
                 <h3>Java</h3>
                 <p>
                 <ul>
-                    <li>Java swing</li>
+                    <li>Java Swing</li>
                     <li>Experience in object-oriented programming</li>
                     <li>Eclipse</li>
                 </ul>
@@ -89,16 +89,16 @@
         <p class="section__subtitle section__subtitle--about"> Data Analyst With Python</p>
 
         <div class="about-me__body">
-            <p>Specialization is applied informatics. focus on using mainly python and java languages.
+            <p>My major is applied informatics, with a major focus on using python and java languages. <br>
+                I am a python developer who loves and wants to develop comprehensively with python programming language
+                especially on data analysis. I am always working hard to learn new knowledge to perfect my skills.
             <ul>
                 <li>Experience in python, Jupyter, SQL, Java Swing
                 </li>
-                <li>Experience in Data Analysis, Machine Learning, Data mining, Data Acquisition, Predictive modeling,
-                    Data Visualization, Web Scraping.</li>
+                <li>Experience in Data Analysis, Machine Learning, Data mining, Predictive modeling, Data Visualization,
+                    Web Scraping.</li>
                 <li>Built models using techniques like Regression, Tree based ensemble methods, Time Series forecasting,
                     KNN, Clustering and Isolation Forest methods.</li>
-                <li>Gained expertise in Data Visualization using matplotlib, Bokeh and Plotly. Highly skilled in using
-                    visualization tools like dash, flask for creating dashboards.</li>
                 <li>Tools: VScode, Eclipse, Git, Github</li>
             </ul>
             </p>
